--- a/.buildkite/test_areas/distributed.yaml
+++ b/.buildkite/test_areas/distributed.yaml
@@ -197,6 +197,30 @@ steps:
     - uv pip install --system -r /vllm-workspace/requirements/kv_connectors.txt
     - DP_EP=1 bash v1/kv_connector/nixl_integration/config_sweep_accuracy_test.sh
 
+- label: P2pNccl Connector PD accuracy (2 GPUs)
+  timeout_in_minutes: 20
+  working_dir: "/vllm-workspace/tests"
+  num_devices: 2
+  source_file_dependencies:
+    - vllm/distributed/kv_transfer/kv_connector/v1/p2p/
+    - tests/v1/kv_connector/nixl_integration/
+  commands:
+    - KV_CONNECTOR=P2pNcclConnector GPU_MEMORY_UTILIZATION=0.6 \
+      bash v1/kv_connector/nixl_integration/run_accuracy_test.sh
+
+- label: LMCache Connector PD accuracy (2 GPUs)
+  timeout_in_minutes: 25
+  working_dir: "/vllm-workspace/tests"
+  num_devices: 2
+  optional: true
+  source_file_dependencies:
+    - vllm/distributed/kv_transfer/kv_connector/v1/lmcache_connector.py
+    - tests/v1/kv_connector/nixl_integration/
+  commands:
+    - pip install lmcache
+    - KV_CONNECTOR=LMCacheConnectorV1 GPU_MEMORY_UTILIZATION=0.6 \
+      bash v1/kv_connector/nixl_integration/run_accuracy_test.sh
+
 - label: Pipeline + Context Parallelism (4 GPUs))
   timeout_in_minutes: 60
   working_dir: "/vllm-workspace/tests"
