--- a/.buildkite/test_areas/distributed.yaml
+++ b/.buildkite/test_areas/distributed.yaml
@@ -181,10 +181,10 @@ steps:
   num_devices: 4
   source_file_dependencies:
     - vllm/distributed/kv_transfer/kv_connector/v1/nixl_connector.py
-    - tests/v1/kv_connector/nixl_integration/
+    - tests/v1/kv_connector/pd_integration/
   commands:
     - uv pip install --system -r /vllm-workspace/requirements/kv_connectors.txt
-    - bash v1/kv_connector/nixl_integration/config_sweep_accuracy_test.sh
+    - bash v1/kv_connector/pd_integration/config_sweep_accuracy_test.sh
 
 - label: DP EP Distributed NixlConnector PD accuracy tests (4 GPUs)
   timeout_in_minutes: 30
@@ -192,10 +192,10 @@ steps:
   num_devices: 4
   source_file_dependencies:
     - vllm/distributed/kv_transfer/kv_connector/v1/nixl_connector.py
-    - tests/v1/kv_connector/nixl_integration/
+    - tests/v1/kv_connector/pd_integration/
   commands:
     - uv pip install --system -r /vllm-workspace/requirements/kv_connectors.txt
-    - DP_EP=1 bash v1/kv_connector/nixl_integration/config_sweep_accuracy_test.sh
+    - DP_EP=1 bash v1/kv_connector/pd_integration/config_sweep_accuracy_test.sh
 
 - label: P2pNccl Connector PD accuracy (2 GPUs)
   timeout_in_minutes: 20
@@ -203,10 +203,11 @@ steps:
   num_devices: 2
   source_file_dependencies:
     - vllm/distributed/kv_transfer/kv_connector/v1/p2p/
-    - tests/v1/kv_connector/nixl_integration/
+    - tests/v1/kv_connector/pd_integration/
   commands:
+    - uv pip install --system -r /vllm-workspace/requirements/kv_connectors.txt
     - KV_CONNECTOR=P2pNcclConnector GPU_MEMORY_UTILIZATION=0.6 \
-      bash v1/kv_connector/nixl_integration/run_accuracy_test.sh
+      bash v1/kv_connector/pd_integration/run_accuracy_test.sh
 
 - label: LMCache Connector PD accuracy (2 GPUs)
   timeout_in_minutes: 25
@@ -215,11 +216,11 @@ steps:
   optional: true
   source_file_dependencies:
     - vllm/distributed/kv_transfer/kv_connector/v1/lmcache_connector.py
-    - tests/v1/kv_connector/nixl_integration/
+    - tests/v1/kv_connector/pd_integration/
   commands:
-    - pip install lmcache
+    - uv pip install --system -r /vllm-workspace/requirements/kv_connectors.txt
     - KV_CONNECTOR=LMCacheConnectorV1 GPU_MEMORY_UTILIZATION=0.6 \
-      bash v1/kv_connector/nixl_integration/run_accuracy_test.sh
+      bash v1/kv_connector/pd_integration/run_accuracy_test.sh
 
 - label: Pipeline + Context Parallelism (4 GPUs))
   timeout_in_minutes: 60
